完善部分逻辑

--- a/comment/public/views/index.html
+++ b/comment/public/views/index.html
@@ -55,7 +55,7 @@
   <title>各抒己见，畅所欲言</title>
 </head>
 <body>
-  <div class="title">Node.js 评论社区</div>
+  <div class="title">Node.js 评论社区系统</div>
   <div class="comment">
     <p>请发表评论</p>
     <button id="btn-publish">我 有 话 要 说</button>
